--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
 
             // --- Copy Link Logic (UPDATED for SANAABIL) ---
             document.getElementById('copy-link-btn').addEventListener('click', async () => {
-                const text = "Eine Initiative die mit wenig viel erreichen will in sha ALLAH -- SANAABIL: https://blu3oceanwaves.github.io/kleinegabegrosserhandel/";
+                const text = "Eine Initiative die mit wenig viel erreichen will in sha ALLAH -- SANAABIL: https://blu3oceanwaves.github.io/SANAABIL/";
                 try {
                     await navigator.clipboard.writeText(text);
                 } catch (err) {
