--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 14.66V20a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2.5L8 2.69 9.31 4H20a2 2 0 0 1 2 2v2.5M12 21.5a8.38 8.38 0 0 0 2.5-1.95L12 17l-2.5 2.55A8.38 8.38 0 0 0 12 21.5z"></path></svg>
                                 </div>
 
-                                <h3 class="text-lg font-medium text-gray-200 mb-1 group-hover:text-[#D4AF37] transition-colors">Brunnenbau</h3>
+                                <h3 class="text-lg font-medium text-gray-200 mb-1 group-hover:text-[#D4AF37] transition-colors">Brunnen Reparatur</h3>
                                 <p class="text-sm text-gray-400 font-serif italic mb-4">Afghanistan</p>
                                 
                                 <div class="flex flex-wrap items-center gap-2">
