--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
                                 </div>
                                 <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium badge-success border">
                                     <svg class="mr-1.5 h-2.5 w-2.5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M5 13l4 4L19 7"></path></svg>
-                                    Erfolgreich
+                                    Erfolgreich wa lillahi-l-hamd
                                 </span>
                             </div>
                         </div>
@@ -622,7 +622,7 @@
                                 </div>
                                 <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium badge-success border">
                                     <svg class="mr-1.5 h-2.5 w-2.5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M5 13l4 4L19 7"></path></svg>
-                                    Erfolgreich
+                                    Erfolgreich wa lillahi-l-hamd
                                 </span>
                             </div>
                         </div>
@@ -656,7 +656,7 @@
                                 </div>
                                 <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium badge-success border">
                                     <svg class="mr-1.5 h-2.5 w-2.5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M5 13l4 4L19 7"></path></svg>
-                                    Erfolgreich
+                                    Erfolgreich wa lillahi-l-hamd
                                 </span>
                             </div>
                         </div>
@@ -745,35 +745,48 @@
                             </p>
                         </div>
                     </div>
-                        <!-- Item 7 -->
-                        <div class="faq-item cursor-pointer">
-                           <div class="flex justify-between items-center p-5">
-                                <span class="text-[var(--text-primary)] font-medium text-base"><span class="text-[var(--accent-gold)] font-bold mr-2">7.</span> Wie wird das Geld (Amana) verwendet?</span>
-                                <svg class="faq-icon w-5 h-5 text-[var(--text-secondary)]" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
-                           </div>
-                           <div class="faq-content px-5">
-                                <p class="text-[var(--text-secondary)] text-sm leading-relaxed border-t border-[var(--glass-border)] pt-3">
-                                    Jeder gespendete Betrag ist für uns eine Amana – ein uns von ALLAH anvertrautes Gut. Die korrekte Verwendung wird durch interne Rücksprache und eine sorgfältige Dokumentation sichergestellt.
-                                </p>
-                           </div>
-                        </div>
 
-                        <!-- Item 8 (NEU) -->
-                        <div class="faq-item cursor-pointer">
-                           <div class="flex justify-between items-center p-5">
-                                <span class="text-[var(--text-primary)] font-medium text-base"><span class="text-[var(--accent-gold)] font-bold mr-2">8.</span> Gibt es Bilder oder Videos als Nachweis?</span>
-                                <svg class="faq-icon w-5 h-5 text-[var(--text-secondary)]" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
-                           </div>
-                           <div class="faq-content px-5">
-                                <p class="text-[var(--text-secondary)] text-sm leading-relaxed border-t border-[var(--glass-border)] pt-3">
-                                    Ja, entsprechende Nachweise werden intern in der Gruppe geteilt. Auf Wunsch können diese auch privat zur Verfügung gestellt werden, um Transparenz zu gewährleisten und gleichzeitig die Privatsphäre zu wahren.
-                                </p>
-                           </div>
+                    <!-- Item 6 -->
+                    <div class="faq-item cursor-pointer">
+                        <div class="flex justify-between items-center p-5">
+                            <span class="text-[var(--text-primary)] font-medium text-base"><span class="text-[var(--accent-gold)] font-bold mr-2">6.</span> Ist die Teilnahme bindend?</span>
+                            <svg class="faq-icon w-5 h-5 text-[var(--text-secondary)]" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
                         </div>
-
+                        <div class="faq-content px-5">
+                            <p class="text-[var(--text-secondary)] text-sm leading-relaxed border-t border-[var(--glass-border)] pt-3">
+                                Nein, die Teilnahme ist absolut freiwillig. Sie können die monatliche Spende jederzeit stoppen, indem Sie einem der Ansprechpartner Bescheid geben.
+                            </p>
+                        </div>
                     </div>
-                </section>
-            </div>
+
+                    <!-- Item 7 -->
+                    <div class="faq-item cursor-pointer">
+                        <div class="flex justify-between items-center p-5">
+                            <span class="text-[var(--text-primary)] font-medium text-base"><span class="text-[var(--accent-gold)] font-bold mr-2">7.</span> Wie wird das Geld (Amana) verwendet?</span>
+                            <svg class="faq-icon w-5 h-5 text-[var(--text-secondary)]" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+                        </div>
+                        <div class="faq-content px-5">
+                            <p class="text-[var(--text-secondary)] text-sm leading-relaxed border-t border-[var(--glass-border)] pt-3">
+                                Jeder gespendete Betrag ist für uns eine Amana – ein uns von ALLAH anvertrautes Gut. Die korrekte Verwendung wird durch interne Rücksprache und eine sorgfältige Dokumentation sichergestellt.
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- Item 8 (NEU) -->
+                    <div class="faq-item cursor-pointer">
+                        <div class="flex justify-between items-center p-5">
+                            <span class="text-[var(--text-primary)] font-medium text-base"><span class="text-[var(--accent-gold)] font-bold mr-2">8.</span> Gibt es Bilder oder Videos als Nachweis?</span>
+                            <svg class="faq-icon w-5 h-5 text-[var(--text-secondary)]" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+                        </div>
+                        <div class="faq-content px-5">
+                            <p class="text-[var(--text-secondary)] text-sm leading-relaxed border-t border-[var(--glass-border)] pt-3">
+                                Ja, entsprechende Nachweise werden intern in der Gruppe geteilt. Auf Wunsch können diese auch privat zur Verfügung gestellt werden, um Transparenz zu gewährleisten und gleichzeitig die Privatsphäre zu wahren.
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+            </section>
             
             <!-- Share Section -->
             <section class="text-center py-12 border-t border-[var(--glass-border)] fade-in-section" style="--delay: 0.5s;">
