Update donation progress text formatting

--- a/index.html
+++ b/index.html
@@ -271,15 +271,15 @@
                 </div>
                 
                 <p class="text-center text-[var(--text-secondary)] mb-10 max-w-xl mx-auto text-sm md:text-base">
-                    Verfolge unseren Fortschritt für unsere drei Spendenprojekte in diesem Monat. Jeder Euro bringt uns dem Ziel näher, in sha ALLAH!
+                    Verfolge unseren Fortschritt für unsere drei Spendenprojekte in diesem Monat ― Jeder Euro bringt uns dem Ziel näher, in sha ALLAH 
                 </p>
                 <!-- Haupt-Fortschrittsbalken -->
                 <div class="mb-12">
                     <div class="flex justify-between items-end mb-3">
                         <span class="text-[var(--text-primary)] font-medium text-sm md:text-base">
-                            Bisher gesammelt: <span class="text-[var(--accent-gold)] text-2xl font-bold ml-1 tracking-wider">407 €</span>
+                            Bisher gesammelt: <span class="text-[var(--accent-gold)] text-2xl font-bold ml-1 tracking-wider">407</span>
                         </span>
-                        <span class="text-[var(--text-secondary)] font-medium text-sm md:text-base">Ziel: 1.500 €</span>
+                        <span class="text-[var(--text-secondary)] font-medium text-sm md:text-base">Ziel: 1.500</span>
                     </div>
                     <!-- Master Bar -->
                     <div class="h-7 w-full bg-[var(--bg-primary)] rounded-full border border-[var(--glass-border)] overflow-hidden relative shadow-inner">
